[package]
name = "tokio-signalfd"
version = "0.1.0"
authors = ["Alexander Polakov <plhk@sdf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio-io = "0.1"
tokio-reactor = "0.1"
mio = "0.6"
futures = "0.1"

[dev-dependencies]
tokio = "0.1"
